k8s/platform/gtm-server/deployment-preview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtm-server-preview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gtm-server-preview
  template:
    metadata:
      labels:
        app: gtm-server-preview
    spec:
      automountServiceAccountToken: false
      containers:
        - name: preview
          image: gcr.io/cloud-tagging-10302018/gtm-cloud-image:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            httpGet:
              path: /healthy
              port: 8080
            timeoutSeconds: 3
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: 20m
              memory: 192Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
