k8s/platform/gtm-server/service-tagging.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtm-server-tagging
spec:
  selector:
    app: gtm-server-tagging
  ports:
    - name: http
      port: 8080
      targetPort: http
